functioning control service
