# Air-Filter/src/main/java/pwr/smart/home/air/filter/device/controller/AirFilterActionController.java
@@ -1,5 +1,7 @@
 package pwr.smart.home.air.filter.device.controller;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,11 +14,16 @@ import pwr.smart.home.air.filter.sensor.service.StatusService;
 @RestController
 public class AirFilterActionController {
 
+    private final static Logger LOGGER = LoggerFactory.getLogger(AirFilterActionController.class);
+
     @Autowired
     StatusService statusService;
 
     @PostMapping("/setTarget")
     public ResponseEntity<String> setTargetAirQuality(@RequestBody String targetAirQuality) {
+
+        LOGGER.info("Received action request. Target air quality: " + targetAirQuality);
+
         int targetAirQualityInt = Integer.parseInt(targetAirQuality);
 
         if (targetAirQualityInt < 1) {
